<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditCardServiceConfirm">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/topbarrectangle"
        app:layout_constraintBottom_toTopOf="@+id/app_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_background"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="303dp"
        android:layout_height="59dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/topbarrectangle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/banklogo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_round_dehaze_24"
        app:tint="@color/black"
        tools:ignore="VectorDrawableCompat" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topicbarrectangle"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:tooltipText="Credit Card Service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/creditcardconfirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Credit Card Service"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/app_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/app_toolbar"
        app:layout_constraintStart_toStartOf="@+id/app_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <ImageView
        android:id="@+id/imageViewOTCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card" />

    <TextView
        android:id="@+id/txtOTPayAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="50dp"
        android:text="@string/txtOTAmount"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTtoAcc" />

    <TextView
        android:id="@+id/txtOTPDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/OTDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtOTPayDate" />

    <Button
        android:id="@+id/btnOTConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/btnOTConfirm"
        app:backgroundTint="@color/theme_color"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewOTCard"
        app:layout_constraintTop_toBottomOf="@+id/edTxtOTP" />

    <TextView
        android:id="@+id/txtOTtoAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:text="To: (credit card account)"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTAccount" />

    <Button
        android:id="@+id/btnOTResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:text="@string/btnOTResend"
        app:backgroundTint="@color/theme_color"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewOTCard"
        app:layout_constraintTop_toBottomOf="@+id/txtOTP" />

    <EditText
        android:id="@+id/edTxtOTP"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTP" />

    <TextView
        android:id="@+id/txtOTAccNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="52dp"
        android:text="@string/OTAccNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOTCurrency"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/LKR"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageViewOTCard"
        app:layout_constraintTop_toTopOf="@+id/txtOTAmt" />

    <TextView
        android:id="@+id/txtOTAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/Amount"
        app:layout_constraintEnd_toStartOf="@+id/txtOTCurrency"
        app:layout_constraintTop_toTopOf="@+id/txtOTPayAmount" />

    <Button
        android:id="@+id/btnOTCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnOTCancel"
        android:textColor="@color/theme_color"
        app:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewOTCard"
        app:layout_constraintTop_toBottomOf="@+id/edTxtOTP" />

    <TextView
        android:id="@+id/txtOTAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="180dp"
        android:text="From:"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtOTAccNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtOTP"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTPayDate" />

    <TextView
        android:id="@+id/txtOTProvAccNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/EBAccNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtOTtoAcc" />

    <TextView
        android:id="@+id/txtOTPayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:text="@string/txtOTDate"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTPayAmount" />

  </androidx.constraintlayout.widget.ConstraintLayout>