<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBeneficiary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="413dp"
        android:layout_height="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_toplogo"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/transferHeading"
            android:layout_width="328dp"
            android:layout_height="37dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/editBenficary"
            android:textColor="@color/theme_color"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="413dp"
        android:layout_height="500dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/PaymentOptionLable"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/paymentMethodSpinner"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/dropdown_background"
                    android:entries="@array/paymentMethods"
                    android:labelFor="@id/textView10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10N"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/selecBenkBank"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spinnerBank"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/dropdown_background"
                    android:entries="@array/beneficiaryBanks"
                    android:labelFor="@id/textView10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10N1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/SelectBranchLable"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spinnerBranch"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/dropdown_background"
                    android:entries="@array/beneficiaryBranches"
                    android:labelFor="@id/textView10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10N2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/benAccountNumberString"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edBenAccountNumber"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/dropdown_background"
                    android:ems="10"
                    android:hint="@string/accountNumberHint"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:textColorHint="#575555" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10N3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/benAccountNameString"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edBenAccountName"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/dropdown_background"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:textColorHint="#575555" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10N4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/beneficiaryEmail"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edBenAccountEmail"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/dropdown_background"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:textColorHint="#575555" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10N5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/beneficiaryMobile"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edBenAccountMobile"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/dropdown_background"
                    android:ems="10"
                    android:hint="@string/beneficiaryMobileHint"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:textColorHint="#575555" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="295dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_border"
        android:onClick="onclickEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:onClick="onclickEdit"
            android:text="@string/updateTag"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>